# mem

./: .env.example  .env.production  .gitignore  CLAUDE.md  README.md  build-and-push.sh  config.yaml  docker-compose.override.yml  docker-compose.yml  flake.nix  push-images.sh  pyproject.toml  run.sh  setup.sh  start-mem.sh  stop-mem.sh
deploy/: README.md  build-and-push.sh  deploy-to-wise18.sh  mem.service
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  SCHEMA.md
mem/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  Makefile  README.md  STREAMING_IMPLEMENTATION.md  config.yaml  flake.nix  pyproject.toml
mem-ui/: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  README_STREAMING.md  flake.nix  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
mem-ui/docs/: COMPONENTS.md
mem-ui/src/: App.test.tsx  App.tsx  index.css  main.tsx
mem-ui/src/components/: ErrorBoundary.tsx
mem-ui/src/components/Content/: AddContentModal.tsx  ContentViewer.test.tsx  ContentViewer.tsx  SpeakerEditor.tsx
mem-ui/src/components/Search/: SearchBar.test.tsx  SearchBar.tsx
mem-ui/src/components/Settings/: SettingDropdown.tsx  SettingSection.tsx  SettingSlider.tsx  SettingToggle.tsx  index.ts
mem-ui/src/components/Sidebar/: DateSelector.test.tsx  DateSelector.tsx  Sidebar.test.tsx  Sidebar.tsx  VerticalActivityTimeline.test.tsx  VerticalActivityTimeline.tsx
mem-ui/src/components/Stream/: StreamCard.tsx  StreamControls.tsx  StreamManager.tsx
mem-ui/src/hooks/: useAnnotations.ts  useSettings.ts  useStreams.test.ts  useStreams.ts  useTimeline.test.ts  useTimeline.ts  useTranscribe.ts  useUpdateSpeaker.ts  useVoiceNotes.ts  useVoiceProfiles.test.ts  useVoiceProfiles.ts
mem-ui/src/pages/: Settings.tsx  Timeline.tsx
mem-ui/src/utils/: contentIcons.tsx  debounce.test.ts  debounce.ts
mem/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  OPERATIONS.md  SCHEMA.md  STREAMING.md
mem/src/: config.py
mem/src/api/: app.py  exceptions.py  models.py  routes.py  services.py  settings.py  voice_profiles.py
mem/src/capture/: extractor.py  frame.py  pipeline.py  stream_server.py  sttd_client.py  text_merger.py  transcriber.py
mem/src/storage/: db.py  models.py  schema.sql
mem/tests/: conftest.py  test_annotations.py  test_api_routes.py  test_api_services.py  test_db.py  test_extractor.py  test_frame.py  test_models.py  test_pipeline.py  test_transcriber.py  test_upload.py
rtmp/: .dockerignore  Dockerfile  nginx.conf  stream_handler.py  test_stream_handler.py
scripts/: backup.sh  create_test_video.py  restore.sh
src/: __init__.py  cli.py  config.py
src/capture/: extractor.py  frame.py  pipeline.py  transcriber.py
src/storage/: db.py  models.py  schema.sql
test/: pipeline.sh
tests/: test_annotations.py  test_extractor.py  test_frame.py  test_text_merger.py
(+15 files in other folders)
